# org.openocd-openocd

./: .build  CMakeLists.txt  Jenkinsfile  build_artifact.py
cmake/toolchainfiles/: toolchain_ubuntu_arm64.cmake
cmake/tools/: apply_patches.py
jonchki/: jonchkihere.py  platform_detect.py
libusb/: CMakeLists.txt
openocd/: CMakeLists.txt  __README__.txt
openocd/copy/: CMakeLists.txt
openocd/copy/cmake/: config.h.in
openocd/copy/src/: muhkuh_openocd.c  muhkuh_openocd.h
openocd/installer/: install_linux.lua  install_windows.lua  openocd.xml
openocd/patches/: 003_add_netiol_target.diff  004_discard_sig_handlers.diff
